    is enabled with the "clock" option (FIXME: it should always be used -
    independent from the "clock" setting)
  - Implemented graphics mode snapshot for VBE, Cirrus and standard VGA modes.
    CGA modes are not supported yet.

- Config interface
  - win32paramdlg: dialog size now adjusted to support larger label text

- SF patches applied
  [3302668] VMX preemption timer by Jianan Hao
  [3327510] Fix wrong address translation in debugger by Jianan Hao
  [3323758] Ctrl-Break support for the Win32 gui by Nikolay Nikolov
  [3316785] Ctrl-Break support for the X11 gui by Nikolay Nikolov
  [3298173] Breakpoint on VMEXIT event by Jianan Hao
  [3295737] Fix CopyHost*WordLittleEndian macros by Heikki Lindholm
  [3289448] optimized powerpc byte swapping by Heikki Lindholm
  [3292581] Core Audio first aid by Heikki Lindholm
  [3205979] Compilation fixes for OpenBSD by Brad Smith
  [3290979] acpi/muldiv64 endian bug by Heikki Lindholm
  [3289459] Mac OS X audio missing framework dependency by Heikki Lindholm
  [3267459] fix xrandr related crash by Heikki Lindholm
  [3190995] add eth backend based on Slirp by Heikki Lindholm

- these S.F. bugs were closed/fixed
  [3277639] incompatible colours in palette
  [1788739] Abort on large memory setting
  [3012207] Int 13h FN 48h incorrect return values
  [3363289] holding shift key causes capslock hang
  [1819639] Two incompatible crc32 modules
  [3324111] configure for VCPP.NET issues
  [3190970] Installing linux causes a crash in pci_ide
  [3077616] Fedora 13 installation fails on Bochs 2.4.5
  [3294671] ./configure --enable-pci --disable-cdrom
  [3303818] wrong memory size is reported to GRUB (e820 problem?)
  [3297475] trace cache disabled mode will miss SMC
  [3170157] BIOS32 PCI service wrong length
  [3025030] PIT mistakenly connected to IRQ0 IOAPIC instead of IRQ2
  [3266738] GUI debugger does not update CPU mode correctly
  [3292571] SB16 doesn't reinit correctly
  [3175168] Cirrus CL-GD5446 emulation incorrect